# llm-rust-lean-pipeline

./: .gitignore  add_to_library.bash  cleanup_artifacts.py  diag_lean_server.py  extract_crate.py  generate_proof_manifest.py  pipeline.py  pipeline_diagram.drawio  probe_lean_lsp.py  probe_lean_lsp_local.py  probe_make_proof_multiturn.py  proof-agent-giveup-notes.md  run_batch.py  setup_crate.bash  smoke_test.py  sorry_report.py
benchmarks/claude-opus-4-7/alloc/is_size_align_valid_usize_modified/: Cargo.toml
benchmarks/claude-opus-4-7/alloc/is_size_align_valid_usize_modified/attempted_changes/20260518-190916/0001_stage1_make_pbt_patched/: before.rs  error_context.txt  metadata.json  search_replace.txt
benchmarks/claude-opus-4-7/alloc/is_size_align_valid_usize_modified/attempted_changes/20260518-190916/0002_stage2_rust_hax_lean_error/: error_context.txt  metadata.json  search_replace.txt
benchmarks/claude-opus-4-7/alloc/is_size_align_valid_usize_modified/attempted_changes/20260518-190916/0003_stage2_rust_hax_lean_patched/: after.rs  before.rs  metadata.json
benchmarks/claude-opus-4-7/alloc/is_size_align_valid_usize_modified/attempted_changes/20260518-190916/0004_stage5_make_lean_obligations_patched/: error_context.txt  metadata.json  search_replace.txt
benchmarks/claude-opus-4-7/alloc/is_size_align_valid_usize_modified/attempted_changes/20260518-190916/0005_stage6_make_proof_error/: before.lean  error_context.txt  metadata.json
benchmarks/claude-opus-4-7/alloc/is_size_align_valid_usize_modified/attempted_changes/20260518-190916/0006_stage6_make_proof_written/: after.lean  error_context.txt  metadata.json
benchmarks/claude-opus-4-7/alloc/is_size_align_valid_usize_modified/attempted_changes/20260518-190916/0007_stage6_make_proof_written/: error_context.txt  metadata.json
benchmarks/claude-opus-4-7/alloc/is_size_align_valid_usize_modified/attempted_changes/20260518-190916/0008_stage6_make_proof_patched/: before.lean  error_context.txt  metadata.json  search_replace.txt
benchmarks/claude-opus-4-7/alloc/is_size_align_valid_usize_modified/attempted_changes/20260518-190916/0009_stage6_make_proof_patched/: before.lean  error_context.txt  metadata.json  search_replace.txt
benchmarks/claude-opus-4-7/alloc/is_size_align_valid_usize_modified/attempted_changes/20260518-190916/0010_stage6_make_proof_patched/: after.lean  before.lean  error_context.txt  metadata.json  search_replace.txt
benchmarks/claude-opus-4-7/alloc/is_size_align_valid_usize_modified/attempted_changes/20260518-190916/0011_stage6_make_proof_patched/: error_context.txt  metadata.json  search_replace.txt
benchmarks/claude-opus-4-7/alloc/is_size_align_valid_usize_modified/attempted_changes/20260518-190916/0012_stage6_make_proof_patched/: before.lean  error_context.txt  metadata.json  search_replace.txt
benchmarks/claude-opus-4-7/alloc/is_size_align_valid_usize_modified/attempted_changes/20260518-190916/0013_stage6_make_proof_patched/: after.lean  before.lean  error_context.txt  metadata.json  search_replace.txt
benchmarks/claude-opus-4-7/alloc/is_size_align_valid_usize_modified/attempted_changes/20260518-190916/0014_stage6_make_proof_patched/: after.lean  error_context.txt  metadata.json  search_replace.txt
benchmarks/claude-opus-4-7/alloc/is_size_align_valid_usize_modified/attempted_changes/20260518-190916/0015_stage6_make_proof_patched/: after.lean  error_context.txt  metadata.json  search_replace.txt
benchmarks/claude-opus-4-7/alloc/is_size_align_valid_usize_modified/attempted_changes/20260518-190916/0016_stage6_make_proof_patched/: after.lean  error_context.txt  metadata.json  search_replace.txt
benchmarks/claude-opus-4-7/alloc/is_size_align_valid_usize_modified/src/: lib.rs
benchmarks/claude-opus-4-7/alloc/padding_needed_for_usize_modified/: Cargo.toml
benchmarks/claude-opus-4-7/alloc/padding_needed_for_usize_modified/src/: lib.rs
benchmarks/claude-opus-4-7/alloc/size_rounded_up_to_custom_align_usize_modified/: Cargo.toml
benchmarks/claude-opus-4-7/alloc/size_rounded_up_to_custom_align_usize_modified/src/: lib.rs
benchmarks/claude-opus-4-7/array/rsplit_array_mut_u64_modified/: Cargo.toml
benchmarks/claude-opus-4-7/array/rsplit_array_ref_u64_modified/: Cargo.toml
benchmarks/claude-opus-4-7/array/rsplit_array_ref_u64_modified/src/: lib.rs
benchmarks/claude-opus-4-7/bool/then_some_u64_modified/: Cargo.toml
benchmarks/claude-opus-4-7/bool/then_some_u64_modified/src/: lib.rs
benchmarks/claude-opus-4-7/byteorder-1.5.0/big_endian_from_slice_u64_modified/: Cargo.toml
benchmarks/claude-opus-4-7/byteorder-1.5.0/big_endian_from_slice_u64_modified/src/: lib.rs
benchmarks/claude-opus-4-7/byteorder-1.5.0/big_endian_read_u64_modified/: Cargo.toml
benchmarks/claude-opus-4-7/byteorder-1.5.0/big_endian_read_u64_modified/src/: lib.rs
benchmarks/claude-opus-4-7/byteorder-1.5.0/little_endian_from_slice_u64_modified/: Cargo.toml
benchmarks/claude-opus-4-7/byteorder-1.5.0/little_endian_from_slice_u64_modified/src/: lib.rs
benchmarks/claude-opus-4-7/map/map_into_inner_u64_modified/: Cargo.toml
benchmarks/claude-opus-4-7/map/map_rfold_u64_modified/: Cargo.toml
benchmarks/claude-opus-4-7/map/map_rfold_u64_modified/src/: lib.rs
benchmarks/claude-opus-4-7/map/map_size_hint_u64_modified/: Cargo.toml
benchmarks/claude-opus-4-7/map/map_size_hint_u64_modified/src/: lib.rs
benchmarks/code/map/map_fold_method_u64/: Cargo.toml
benchmarks/code/map/map_fold_method_u64/src/: lib.rs
benchmarks/code/map/map_is_empty_u64/: Cargo.toml
benchmarks/code/map/map_is_empty_u64/src/: lib.rs
benchmarks/code/map/map_next_back_u64/: Cargo.toml
benchmarks/code/map/map_next_back_u64/src/: lib.rs
benchmarks/code/map/map_next_u64/: Cargo.toml
benchmarks/code/map/map_next_u64/src/: lib.rs
benchmarks/code/map/map_try_fold_method_u64/: Cargo.toml
benchmarks/code/map/map_try_fold_method_u64/src/: lib.rs
benchmarks/code/map/map_try_rfold_u64/: Cargo.toml
benchmarks/code/map/map_try_rfold_u64/src/: lib.rs
benchmarks/code/num-integer-0.1.46/div_mod_floor_u64/: Cargo.toml
(+6249 files in other folders)
