[package]
name = "is_size_align_valid_usize"
version = "0.1.0"
edition = "2024"

[package.metadata.extracted_from]
crate = "core"
version = "0.0.0"
function = "is_size_align_valid"
type = "usize"
function_path = "core::alloc::Layout::is_size_align_valid"
impl_type = "Layout"

[dependencies]
hax-lib = "0.3.6"
