[package]
name = "padding_needed_for_usize"
version = "0.1.0"
edition = "2024"

[package.metadata.extracted_from]
crate = "core"
version = "0.0.0"
function = "padding_needed_for"
type = "usize"
function_path = "core::alloc::Layout::padding_needed_for"
impl_type = "Layout"

[dependencies]
hax-lib = "0.3.6"
