[package]
name = "size_rounded_up_to_custom_align_usize"
version = "0.1.0"
edition = "2024"

[package.metadata.extracted_from]
crate = "core"
version = "0.0.0"
function = "size_rounded_up_to_custom_align"
type = "usize"
function_path = "core::alloc::Layout::size_rounded_up_to_custom_align"
impl_type = "Layout"

[dependencies]
hax-lib = "0.3.6"
