[package]
name = "rsplit_array_ref_u64"
version = "0.1.0"
edition = "2024"

[package.metadata.extracted_from]
crate = "core"
version = "0.0.0"
function = "rsplit_array_ref"
type = "u64"
function_path = "core::array::<[T; N]>::rsplit_array_ref"
impl_type = "[u64; N]"

[dependencies]
hax-lib = "0.3.6"

[dev-dependencies]
proptest = "1"
