[package]
name = "then_some_u64"
version = "0.1.0"
edition = "2024"

[package.metadata.extracted_from]
crate = "core"
version = "0.0.0"
function = "then_some"
type = "u64"
function_path = "core::bool::<impl bool>::then_some"
impl_type = "bool"

[dependencies]
hax-lib = "0.3.6"

[dev-dependencies]
proptest = "1"
