[package]
name = "big_endian_from_slice_u64"
version = "0.1.0"
edition = "2024"

[package.metadata.extracted_from]
crate = "byteorder"
version = "1.5.0"
function = "from_slice_u64"
type = "u64"
function_path = "byteorder::BigEndian::from_slice_u64"
impl_type = "BigEndian"
impl_trait = "ByteOrder"

[dependencies]
hax-lib = "0.3.6"
