[package]
name = "big_endian_read_u64"
version = "0.1.0"
edition = "2024"

[package.metadata.extracted_from]
crate = "byteorder"
version = "1.5.0"
function = "read_u64"
function_path = "byteorder::BigEndian::read_u64"
impl_type = "BigEndian"
impl_trait = "ByteOrder"

[dependencies]
hax-lib = "0.3.6"
