[package]
name = "map_into_inner_u64"
version = "0.1.0"
edition = "2024"

[package.metadata.extracted_from]
crate = "core"
version = "0.0.0"
function = "Map::into_inner"
type = "u64"
function_path = "core::iter::adapters::map::Map::into_inner"
impl_type = "Map<I, F>"

[dependencies]
hax-lib = "0.3.7"
