[package]
name = "map_rfold_u64"
version = "0.1.0"
edition = "2024"

[package.metadata.extracted_from]
crate = "core"
version = "0.0.0"
function = "<Map as DoubleEndedIterator>::rfold"
type = "u64"
function_path = "core::iter::adapters::map::<impl DoubleEndedIterator for Map<I, F>>::rfold"
impl_type = "Map<I, F>"
impl_trait = "DoubleEndedIterator"

[dependencies]
hax-lib = "0.3.7"
