[package]
name = "map_is_empty_u64"
version = "0.1.0"
edition = "2024"

[package.metadata.extracted_from]
crate = "core"
version = "0.0.0"
function = "<Map as ExactSizeIterator>::is_empty"
type = "u64"
function_path = "core::iter::adapters::map::<impl ExactSizeIterator for Map<I, F>>::is_empty"
impl_type = "Map<I, F>"
impl_trait = "ExactSizeIterator"
