[package]
name = "map_next_u64"
version = "0.1.0"
edition = "2024"

[package.metadata.extracted_from]
crate = "core"
version = "0.0.0"
function = "<Map as Iterator>::next"
type = "u64"
function_path = "core::iter::adapters::map::<impl Iterator for Map<I, F>>::next"
impl_type = "Map<I, F>"
impl_trait = "Iterator"
