[package]
name = "div_mod_floor_u64"
version = "0.1.0"
edition = "2024"

[dependencies]
hax-lib = "0.3.6"

[dev-dependencies]
num-integer = "0.1.46"

[package.metadata.extracted_from]
crate = "num-integer"
version = "0.1.46"
function = "div_mod_floor"
type = "u64"
function_path = "num_integer::div_mod_floor"
